--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -180,7 +180,7 @@ When total abundances of certain phyla are of relevance, the data is initially a
 
 ```{r}
 # Agglomerate by phylum
-tse_phylum <- tse %>% agglomerateByRank(rank = "Phylum")
+tse_phylum <- tse %>% mergeFeaturesByRank(rank = "Phylum")
 
 # Subset by feature and remove NAs
 tse_phylum_subset_by_feature <- tse_phylum[rowData(tse_phylum)$Phylum %in% c("Actinobacteria", "Chlamydiae") & !is.na(rowData(tse_phylum)$Phylum), ]
@@ -244,7 +244,7 @@ remove those instances.
 
 ```{r}
 # Agglomerate data at Genus level 
-tse_genus <- agglomerateByRank(tse, rank = "Genus")
+tse_genus <- mergeFeaturesByRank(tse, rank = "Genus")
 # List bacteria that we want to include
 genera <- c("Class:Thermoprotei", "Genus:Sulfolobus", "Genus:Sediminicola")
 # Subset data
@@ -367,4 +367,4 @@ tse
 
 ### Additional functions
 * [mapTaxonomy](https://microbiome.github.io/mia/reference/taxonomy-methods.html)
-* [mergeRows/mergeCols](https://microbiome.github.io/mia/reference/merge-methods.html)
+* [mergeFeatures/mergeSamples](https://microbiome.github.io/mia/reference/merge-methods.html)
