--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -446,7 +446,7 @@ data at the Genus level and get the dominant taxa per sample.
 
 ```{r}
 # Agglomerate to genus level
-tse_genus <- agglomerateByRank(tse,
+tse_genus <- mergeFeaturesByRank(tse,
                                rank = "Genus")
 
 # Convert to relative abundances
@@ -563,7 +563,7 @@ the variation between communities.
 
 ```{r}
 # Agglomerate data to Species level
-tse <- agglomerateByRank(tse,
+tse <- mergeFeaturesByRank(tse,
                          rank = "Species")
 
 # Set seed for reproducibility
