--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -27,7 +27,7 @@ library(miaViz)
 tse <- transformAssay(tse, assay.type = "counts", method = "relabundance")
 
 # Getting top taxa on a Phylum level
-tse_phylum <- agglomerateByRank(tse, rank ="Phylum", onRankOnly=TRUE)
+tse_phylum <- mergeFeaturesByRank(tse, rank ="Phylum", onRankOnly=TRUE)
 top_taxa <- getTopFeatures(tse_phylum,top = 5, assay.type = "relabundance")
 
 # Renaming the "Phylum" rank to keep only top taxa and the rest to "Other"
