--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -264,7 +264,7 @@ data("GlobalPatterns", package = "mia")
 tse <- GlobalPatterns
 
 # Agglomerate by rank
-tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree = TRUE)
+tse <- mergeFeaturesByRank(tse, rank = "Phylum", agglomerateTree = TRUE)
 ```
 
 Here we will further our use of `cluster` by renaming the clusters column in 
@@ -291,6 +291,7 @@ We can see the Laplace approximation (model evidence)
 for each model of the k models.
 
 ```{r dmm5}
+BiocManager::install("microbiome/miaViz")
 library(miaViz)
 plotDMNFit(tse_dmm, type = "laplace", name = "DMM")
 ```
