--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -180,7 +180,7 @@ Let us here do aggregation to genus level, add relative abundance
 assay, and perform prevalence filtering.
 
 ```{r datasetup}
-tse <- agglomerateByRank(tse0, rank = "genus") %>%
+tse <- mergeFeaturesByRank(tse0, rank = "genus") %>%
        transformAssay(assay.type = "counts",
                        method = "relabundance",
 		       MARGIN = "samples") %>%
@@ -340,7 +340,7 @@ that we specify.
 
 ```{r ancombc2, warning = FALSE, eval=TRUE}
 # Agglomerate data to genus level and add this new abundance table to the altExp slot
-altExp(tse, "genus") <- agglomerateByRank(tse, "genus")
+altExp(tse, "genus") <- mergeFeaturesByRank(tse, "genus")
 
 # Identify prevalent genera
 prevalent.genera <- getPrevalentFeatures(altExp(tse, "genus"), detection = 0, prevalence = 30/100)
