--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -46,7 +46,7 @@ Let's first preprocess the data.
 
 ```{r super2}
 # Agglomerate data
-tse <- agglomerateByRank(tse, rank = "order")
+tse <- mergeFeaturesByRank(tse, rank = "order")
 
 # Apply CLR transform
 tse <- transformAssay(tse, assay.type = "counts", method = "clr",
