--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -274,7 +274,7 @@ at the Phylum level are available in the aforementioned chapter.
 
 ```{r plotAbundance1}
 # agglomerate tse by Order
-tse_order <- agglomerateByRank(tse,
+tse_order <- mergeFeaturesByRank(tse,
                                 rank = "Order",
                                 onRankOnly = TRUE)
 # transform counts into relative abundance
@@ -345,7 +345,7 @@ feature and sample clusters in a heatmap, along with further functionality.
 
 ```{r pheatmap1}
 # Agglomerate tse by phylum
-tse_phylum <- agglomerateByRank(tse,
+tse_phylum <- mergeFeaturesByRank(tse,
                                 rank = "Phylum",
                                 onRankOnly = TRUE)
 
