--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -167,7 +167,7 @@ tse <- tse[ , !is.na(colData(tse)$Age_Years) ]
 We agglomerate microbiome data to Phylum:
 
 ```{r, message=FALSE, warning=FALSE}
-tse_phylum <- agglomerateByRank(tse, "Phylum")
+tse_phylum <- mergeFeaturesByRank(tse, "Phylum")
 ```
 
 We extract the counts assay and covariate data to build the model
@@ -262,7 +262,7 @@ tse <- sampleMetadata %>%
     filter(!is.na(alcohol)) %>% # excluding missing values
     returnSamples("relative_abundance")
 
-tse_Genus <- agglomerateByRank(tse, rank="genus")
+tse_Genus <- mergeFeaturesByRank(tse, rank="genus")
 tse_Genus <- addPerSampleDominantFeatures(tse_Genus,assay.type="relative_abundance", name = "dominant_taxa")
 
 # Performing PCoA with Bray-Curtis dissimilarity.
