--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -288,7 +288,7 @@ However, such data are not always included.
 1. Calculate library sizes
 2. Subsample / rarify the counts (see: subsampleCounts)
 
-Useful functions: nrow, ncol, dim, summary, table, quantile, unique, addPerCellQC, agglomerateByRank
+Useful functions: nrow, ncol, dim, summary, table, quantile, unique, addPerCellQC, mergeFeaturesByRank
 
 ### Prevalent and core taxonomic features
 
@@ -306,7 +306,7 @@ Useful functions: getPrevalence, getPrevalentFeatures, subsetByPrevalentFeatures
 2. Create two histograms. Another shows the distribution of absolute counts, another shows how CLR transformed values are distributed.
 3. Visualize how relative abundances are distributed between taxa in samples.
 
-Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAssay, ggplot, wilcox.test, agglomerateByRank, plotAbundance
+Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAssay, ggplot, wilcox.test, mergeFeaturesByRank, plotAbundance
 
 ### Other functions
 
@@ -337,7 +337,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 1. Import the mia package, load peerj13075 with `data` and store it into a
    variable named `tse`.
 2. List the available taxonomic ranks in the data with `taxonomyRanks`.
-3. Agglomerate the data to Phylum level with `agglomerateByRank` and the
+3. Agglomerate the data to Phylum level with `mergeFeaturesByRank` and the
    appropriate value for `Rank`.
 4. Report the dimensions of the TreeSE before and after agglomerating. You can
    use `dim` for that.
@@ -374,7 +374,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
    contain the alpha diversity indices?
 4. **Extra**: Agglomerate the TreeSE by phylum and compare the mean Shannon
    diversity of the original experiment with its agglomerated version. You can
-   use `agglomerateByRank` to perform agglomeration and `mean` to calculate the
+   use `mergeFeaturesByRank` to perform agglomeration and `mean` to calculate the
    mean values of the respective columns in colData.
 
 ### Visualization 
@@ -568,7 +568,7 @@ walkthrough, which may be simplified in the future.
 5. Analyze diets' association on beta diversity. Calculate dbRDA and then PERMANOVA. Visualize coefficients. Which taxa's abundances differ the most between samples? 
 6. Interpret your results. Is there association between community composition and location? What are those taxa that differ the most; find information from literature.
 
-Useful functions: runMDS, runRDA, anova.cca, transformAssay, agglomerateByRank, ggplot, plotReducedDim, vegan::adonis2
+Useful functions: runMDS, runRDA, anova.cca, transformAssay, mergeFeaturesByRank, ggplot, plotReducedDim, vegan::adonis2
 
 
 
@@ -598,7 +598,7 @@ Useful functions: [], ggplot2::geom_boxplot, ggplot2::geom_jitter, wilcox.test, 
 5. Choose statistically significant taxa and visualize their abundances with boxplot & jitterplot.
 
 
-Useful functions: wilcox.test, kruskal.test, ggplot, pheatmap, ComplexHeatMap::Heatmap, ancombc, aldex2, maaslin2, agglomerateByRank, transformAssay, subsetByPrevalentFeatures
+Useful functions: wilcox.test, kruskal.test, ggplot, pheatmap, ComplexHeatMap::Heatmap, ancombc, aldex2, maaslin2, mergeFeaturesByRank, transformAssay, subsetByPrevalentFeatures
 
 
 
@@ -663,7 +663,7 @@ new modified version of the experiment in a suitable place (the altExp slot).
    `prevalent_microbiota_family`, which contains the microbiota experiment
    agglomerated by Family with a prevalence threshold of 10%. You can
    agglomerate and in parallel select by prevalence with
-   `agglomerateByPrevalence`.
+   `mergeFeaturesByPrevalence`.
 
 Good job! You agglomerated one of the experiments in the MAE and stored it as
 an alternative experiment.
