Add condition to remove microbiome duplicates

--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -179,8 +179,13 @@ colData(mae)$Diet <- ifelse(colData(mae)$Diet == "High-fat" |
                               colData(mae)$Diet == "High-fat + XOS", 
                             "High-fat", "Low-fat")
 
-# Removing duplicates at the microbiome data
-# which are also in form e.g. "Ambiguous" and "uncultured" taxa
+# Remove duplicates from microbiome data if present
+if (any(duplicated(rownames(assay(mae[[1]]))))) {
+  mae[[1]] <-
+    mae[[1]][!duplicated(rownames(assay(mae[[1]]))), ]
+}
+
+# Transforming microbiome data with rclr
 mae[[1]] <- mae[[1]][!duplicated(rownames(assay(mae[[1]]))), ]
 
 # Transforming microbiome data with rclr
