--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -171,7 +171,7 @@ The `mae` object could be used straight to create the MOFA model. Yet,
 we transform our assays since the model assumes normality per
 default. We can also use Poisson or Bernoulli distributions among others.
 
-Note that duplicates, such as "uncultured", might appear when aggregating the microbiome data by a taxonomic rank. To check for duplicates, run `any(duplicated(rownames(assay(mae[[1]]))))`. If it returns `TRUE`, then the
+Note that duplicates, such as "uncultured", might appear when aggregating the microbiome data by a taxonomic rank. To check for duplicates, run `any(duplicated(rownames(mae[[1]])))`. If it returns `TRUE`, then the
 duplicates are present. We can add `rownames(mae[[1]]) <- getTaxonomyLabels(mae[[1]], make_unique=TRUE)` to remove them.
 
 ```{r, message=FALSE, warning=FALSE}
