Simplify colData import and correct typo

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -656,7 +656,7 @@ abundance table is named as "counts".  Let us inspect only the first
 cols and rows.
 
 ```{r}
-assay(se, "counts")[1:3, 1:3]
+assay(tse, "counts")[1:3, 1:3]
 ```
 
 The `rowdata` includes taxonomic information from the biom file. The `head()` command shows just the beginning of the data table for an overview.
@@ -693,12 +693,9 @@ head(colData(tse))
 Let us add colData from the sample metadata, which is stored in a CSV file.
 
 ```{r}
-# CSV file without headers and rownames in the first column
-sample_meta <- read.table(sample_meta_file_path,
-                          sep = ",", header = FALSE, row.names = 1)
-
-# We can add headers
-colnames(sample_meta) <- c("patient_status", "cohort", "patient_status_vs_cohort", "sample_name")
+# CSV file with colnames in the first row and rownames in the first column
+sample_meta <- read.csv(sample_meta_file_path,
+                        sep = ",", row.names = 1)
 
 # Add this sample data to colData of the taxonomic data object
 # Note that the data must be given in a DataFrame format (required for our purposes)
