Streamline biom import section (#316)
* Streamline biom import section

* Improve section on import from biom

* Fix bib ref

* Simplify colData import and correct typo

---------

Co-authored-by: Leo Lahti <leo.lahti@iki.fi>

--- a/book.bib
+++ b/book.bib
@@ -1413,4 +1413,15 @@ https://github.com/thomasp85/patchwork},
   langid = {english}
 }
 
+@article{Tengeler2020,
+  title={Gut microbiota from persons with attention-deficit/hyperactivity disorder affects the brain in mice},
+  author={C Tengeler, Anouk and A Dam, Sarita and Wiesmann, Maximilian and Naaijen, Jilly and van Bodegom, Miranda and Belzer, Clara and J Dederen, Pieter and Verweij, Vivienne and Franke, Barbara and Kozicz, Tamas and Arias Vasquez, Alejandro and J Kiliaan, Amanda},
+  journal={Microbiome},
+  volume={8},
+  pages={1--14},
+  year={2020},
+  publisher={Springer},
+  doi = {10.1186/s40168-020-00816-x}
+}
+
 
